--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                  My Story
             </u>
         </h1>
-        <p>I am a young Nigeria Web developer of age 14 at point of writing who schools in Our Lady and St Francis Catholic College , Isale Aro ,Osogbo,Osun state,Nigeria.Born in the year 2008,by Gods grace. Being born by a God fairing mother who as always push us to be the best.And a God fairing father  who as also done somuch to provide for I,My sister and my 2 brothers.My dream is to become a Software Developer,An artist,a change to the nigerian community.</p>
+        <p>I am a young Nigerian Web developer of age 14 at point of writing. I attend Our Lady and St Francis Catholic College, Isale Aro, Osogbo,Osun state,Nigeria.I was born in the year 2008, by a God fearing mother who as always inspired us to be the best in all life endeavour,and a God fearing father, who as also done so much to provide for me,my sister and my two brothers. My dream is to become a Software Developer,a potential architect to bring a great change to Nigeria and the world at large.</p>
     </section>
 
 
@@ -271,7 +271,7 @@
                 I am a Front-end web Developer at the moment with about two years experience at time of writing 
            </li>
            <li>
-               I am also a Talented artist who's works are mainly on archetecture.theses are some of my art works:
+               I am also a Talented artist whose works are mainly on architectural structures.These are some of my art works:
            </li>
            <br>
 
